--- a/style.css
+++ b/style.css
@@ -13,12 +13,21 @@ body {
   align-items: center;
 }
 
+.background {
+  display: block;
+  position: absolute;
+  top: -21em;
+  left: 0;
+  width: 100%;
+  height: 66em;
+  object-fit: cover;
+}
+
 h1.page-top {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
   text-align: center;
-  background-color: rgba(0,0,0,0.8);
   color: white;
   margin: 0;
   padding: 0.45em 0 0.45em 0;
@@ -28,6 +37,12 @@ h1.page-top {
   width: 100%;
   border-radius: 0em;
 }
+
+/* Header color change on page scroll */
+.active {
+   background-color: rgba(0, 0, 0, 0.6);
+   transition: 0.25s;
+  }
 
 h1.page-top img {
   width: 6rem;
@@ -43,14 +58,13 @@ h1.page-top span {
 }
 
 .hero {
-  background-image: url(assets/PIP-1.jpg);
-  background-position: 90% 80%;
-  background-size: cover;
   width: 100%;
   height: 40em;
   display: flex;
   justify-content: left;
   align-items: center;
+  position: relative;
+  top: 0;
 }
 
 .hero-text{
